fixes hamburger menu on nav (changed to white to match design) fixes footer sizing on smaller screen sizes

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -28,6 +28,9 @@ main {
 .nav-item a {
   color: #ffffff;
 }
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
 
 .logo {
   width: 60px;
@@ -215,7 +218,7 @@ h5 {
 
 footer {
   background-color: $navbar-dark-color;
-  height: 15vh;
+  height: 20vh;
 }
 
 .footer-links {
